chore(): more tweaks, no yet working

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -4,7 +4,7 @@ http {
             root /usr/share/nginx/html;
         }
         location /api/ {
-            proxy_pass localhost:8089;
+            proxy_pass http://localhost:8089;
         }
     }
 }
