--- a/conf/default.conf
+++ b/conf/default.conf
@@ -11,7 +11,7 @@ server {
     }
 
     location /api/login {
-        proxy_pass http://10.40.4.134:9010/api/login;
+        proxy_pass http://myip:9010/api/login;
     }
 
     #error_page  404              /404.html;
